# home-credit

./: .HANDOVER  .gitignore  GUIDE.md  README.md  __init__.py  config.py  data_processing.py  feature_engineering.py  main.py  model_registry.py  pd_model.py  policy_simulation.py  portfolio_monitoring.py  pyproject.toml  run.py  scorecard.py  train_lightgbm.py  train_stacking.py  utils.py
api/: main.py  services.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.vue  echartsTheme.js  style.css
dashboard/src/api/: index.js
dashboard/src/router/: index.js
dashboard/src/views/: FeatureAnalysis.vue  ModelEvaluation.vue  Monitoring.vue  Overview.vue  PolicySimulation.vue  Scorecard.vue
docs/: data_dictionary.html  data_dictionary.md  feature_engineering.html  feature_engineering.md  index.html
tests/: test_api_contracts.py  test_config.py  test_data_processing.py  test_model_registry.py  test_scorecard.py  test_utils.py
