[project]
name = "home-credit"
version = "0.1.0"
description = "Home Credit Default Risk - PD Model & Portfolio Monitoring"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tabulate>=0.10.0",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "shap>=0.51.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
